--- a/loveme/.gitignore
+++ b/loveme/.gitignore
@@ -108,3 +108,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,windows,macos,react
+
+# EsLintCache remover
+.eslintcache
